1999-01-27  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (multiroot3): Add new variant of multiroot3-10 test
	for RELATIVE_REPOS.  Move multiroot3-11 test out of the
	conditionals; it works the same for remote or local,
	RELATIVE_REPOS or no.

	* options.h.in: Make RELATIVE_REPOS the default, as has been
	announced as a future direction since 1997-10-11.
	* sanity.sh (multiroot): Tweak multiroot-update-1a and
	multiroot-update-1b tests to work with either RELATIVE_REPOS or
	non-RELATIVE_REPOS.

	* sanity.sh (client-9): Don't assume the time zone.

1999-01-26  Jim Kingdon  <http://www.cyclic.com>

	Fix one facet of the "cvs add -kb" re-adding problem (the other
	known facet is tested for by binfiles3-8).
	* add.c (add): When re-adding a file, set the keyword expansion
	as we normally would.
	* sanity.sh (binfiles3): New test binfiles3-6a tests for this.

1999-01-22  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (rmadd2): New tests, for undoing a commit.

1999-01-21  Eric Mumpower  <nocturne@cygnus.com>

	* sanity.sh (reposmv): Actually modify CVSROOT in current
	environment when calling functions, rather than trying to achieve
	the same effect with "CVSROOT=foo functionname". (Many common
	bourne shells, including those in SunOS and Solaris 2.4-2.7,
	do not properly handle "ENVVAR=foo command" when "command" is
	a user-defined shell function rather than an actual executable.)

1999-01-15  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (rcs3): Redirect awk's stdin to /dev/null like all the
	other awk invocations.  GNU awk seems not to read stdin in this
	case, but that behavior is hard to reconcile with the Single Unix
	Spec and some awks don't do it.

	* sanity.sh (binfiles, binfiles2, binfiles3, server): Use the same
	tr trick as in rcs3.  People don't seem to have been complaining,
	and this should fix server-4 for HPUX.

1999-01-14  Jim Kingdon  <http://www.cyclic.com>

	* client.c (recv_line): If the line we are reading contains a